Se agregó la funcionalidad de crear categorías, modificar movimientos, activar entidades. Se agregaron campos a la tabla movimiento y se creó la tabla Categoría.

--- a/app/src/main/res/layout/fragment_add_movimiento.xml
+++ b/app/src/main/res/layout/fragment_add_movimiento.xml
@@ -71,6 +71,18 @@
             >
         </RadioButton>
     </RadioGroup>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/mov_add_categoria"
+        android:textColor="@color/colorPrimaryDark"
+        >
+    </TextView>
+    <Spinner
+        android:id="@+id/spnCategoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </Spinner>
 
     <LinearLayout
         android:layout_width="match_parent"
