--- a/app/src/main/res/layout/fragment_item_entidad.xml
+++ b/app/src/main/res/layout/fragment_item_entidad.xml
@@ -80,9 +80,16 @@
                 android:text="Estado" />
 
             <ImageButton
+                android:id="@+id/imgbtnActiveEntidad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 />
+
+            <ImageButton
                 android:id="@+id/imbtnEditEntidad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:background="@drawable/edit_icon_blue"
                 android:src="@drawable/edit_icon_blue" />
 
