--- a/app/src/main/res/layout/fragment_list_movimiento.xml
+++ b/app/src/main/res/layout/fragment_list_movimiento.xml
@@ -55,11 +55,12 @@
         android:src="@drawable/add_plus_32"
         />
     </FrameLayout>
+
     <TextView
         android:id="@+id/txtResumen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="Resumen" />
+        android:layout_marginTop="@dimen/dim_margin_item_cardview"
+        android:text="Resumen"
+        android:textColor="@color/colorPrimaryDark" />
 </LinearLayout>
